<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SystemUI Tuner</string>
    <string name="manager_channel">Manager (Turn Off)</string>
    <string name="tap_to_disable">Tap to disable this notification</string>
    <string name="home">Home</string>
    <string name="category_display">Display</string>
    <string name="category_accessibility">Accessibility</string>
    <string name="category_apps">Apps</string>
    <string name="category_audio">Audio &amp; Sound</string>
    <string name="category_developer">Developer</string>
    <string name="category_easter_eggs">Easter Eggs</string>
    <string name="category_network">Network</string>
    <string name="category_notifications">Notifications</string>
    <string name="category_status_bar">Status Bar</string>
    <string name="category_oem">OEM Features</string>
    <string name="category_system">System</string>
    <string name="category_ui">UI</string>
    <string name="category_lock_screen">Lock Screen</string>
    <string name="category_quick_settings">Quick Settings</string>
    <string name="screen_persistent">Persistent Options</string>
    <string name="category_interaction">Interaction</string>
    <string name="more">More</string>
    <string name="tweaks">Tweaks</string>
    <string name="failure">Failure</string>
    <string name="help_translate">Help Translate</string>
    <string name="sub_cellular">Cellular</string>
    <string name="sub_wifi">Wi-Fi</string>
    <string name="sub_miscellaneous">Miscellaneous</string>
    <string name="sub_htc">HTC</string>
    <string name="sub_huawei">Huawei/Honor</string>
    <string name="sub_lg">LG</string>
    <string name="sub_oneplus">OnePlus</string>
    <string name="sub_samsung">Samsung</string>
    <string name="sub_sony">Sony</string>
    <string name="sub_xiaomi">Xiaomi</string>
    <string name="sub_security">Security</string>
    <string name="sub_storage">Storage</string>
    <string name="sub_power">Power</string>
    <string name="add_to_blacklist">Add to Icon Blacklist</string>
    <string name="remove_from_blacklist">Remove from Icon Blacklist</string>
    <string name="flashlight">Flashlight</string>
    <string name="sub_demo">Demo Mode</string>
    <string name="sub_demo_desc">Demo Mode allows you to force your device\'s status bar into different states. You can use it to show or hide specific icons, specify signal strengths, and a few other things.</string>
    <string name="special_sub_airplane_mode">Airplane Mode Tweaks</string>
    <string name="special_sub_airplane_mode_desc">Airplane mode automatically disables all radios on your device when it is toggled. You can specify which radios should be disabled (such as keeping WiFi on when enabling airplane mode). Also, you can change which radios can be toggled manually when the device enters airplane mode.</string>
    <string name="special_sub_icon_blacklist">Icon Blacklist</string>
    <string name="special_sub_icon_blacklist_desc">Choose specific icons to hide from the status bar. Note that this feature will not work on all devices or with all icons. Notification icons cannot be hidden using this feature.</string>
    <string name="feature_lock_timeout">Set Custom Device Lock Timeout</string>
    <string name="feature_lock_timeout_desc">Under the \"secure lock settings\", you can set an \"automatically lock\" timer. This timer determines how long after the device enters sleep mode that the lock screen should be displayed. Through this option, you can set whatever value (in milliseconds) that you want. If you set a high enough value, then essentially your lock screen will never show (provided you have disabled the \"power button instantly locks device\" feature).</string>
    <string name="feature_battery_saver_trigger">Set Custom Battery Saver Trigger Percent</string>
    <string name="feature_battery_saver_trigger_desc" formatted="false">Google\'s Battery Saver feature can automatically trigger when the battery level is at 5\% or 15\%. With this, you can set your own trigger percent.</string>
    <string name="feature_long_press_delay">Set Custom Long Press Delay</string>
    <string name="feature_long_press_delay_desc">In Accessibility settings, there\'s a feature called \"touch &amp; hold delay\" which allows you to specify how long you have to hold down on the screen for Android to recognize a long-press event. However, the only options by default are \"short\", “medium\", and \"long.\" You can set your own delay.</string>
    <string name="feature_font_scale">Set Custom Font Scale</string>
    <string name="feature_font_scale_desc">Android allows you to set the size of the text shown on your device by specifying a system-wide font scale. This value is typically represented as \"small\", \"normal\", \"large\", \"huge\", and \"extra huge.\" However, you can set your own custom value.</string>
    <string name="feature_freeform">Enable Freeform Multiwindow</string>
    <string name="feature_freeform_desc">Whether to enable freeform multiwindow support. Requires reboot. Only works on Android 7.0+ devices.</string>
    <string name="feature_app_install_location">Set Default App Install Location</string>
    <string name="feature_app_install_location_desc">Default app install location. Choose which storage apps are installed to by default. Normally, apps themselves decide by specifying the value in the AndroidManifest, but you can choose to have them install to the adoptable storage medium if you want.</string>
    <string name="feature_heads_up_notifications">Heads Up Notification Toggle</string>
    <string name="feature_heads_up_notifications_desc">Toggle to globally enable or disable heads up notifications. Heads up notifications are the notifications that pop up at the top of the screen.</string>
    <string name="feature_insufficient_storage_warning">Bypass \"Insufficient Storage Available\" Warning</string>
    <string name="feature_heads_up_snooze_length">Heads-Up Notification Snooze Length</string>
    <string name="feature_heads_up_snooze_length_desc">Milliseconds after a heads up notification is pushed back before the app can interrupt again. (Default: 60 seconds).</string>
    <string name="feature_clock_seconds">Show Clock Seconds</string>
    <string name="feature_clock_seconds_desc">Enable seconds in the status bar clock. This won\'t work on all devices and configurations, including MIUI and One UI.</string>
    <string name="feature_dnd_in_volume">Do Not Disturb Toggle in Volume Indicator</string>
    <string name="feature_dnd_in_volume_desc">Allows you to toggle Do Not Disturb from the volume popup.</string>
    <string name="feature_battery_percent">Show Battery Percentage in Status Bar</string>
    <string name="feature_battery_percent_desc">Shows the current battery percentage in the battery icon on the status bar. May require root to activate.</string>
    <string name="option_qqs_tiles">Quick Settings Header Count</string>
    <string name="option_qqs_tiles_desc">Android Nougat introduced a new quick settings feature, called the Quick Settings Header, that shows the first few quick settings tiles in a single row in the notification shade. Using this option, it\'s possible to increase or decrease the number of tiles shown in that row. This will not work on One UI.</string>
    <string name="option_oneui_clock_position">Clock Position</string>
    <string name="option_oneui_clock_position_desc">On Samsung\'s One UI (Android Pie or later), it\'s possible to change the status bar clock position. Good Lock\'s QuickStar will let you do it, but the options are sometimes limited depending on the device. You can use this to set it to left, middle, or right. Be aware that on One UI 2.0 (Android 10), you need QuickStar to be installed for this option to have an effect. To make this option persistent, enable Icon Blacklist in Persistent Options.</string>
    <string name="option_night_mode_desc">Android Nougat introduced a native option to tint the display yellow at night, aptly called Night Mode. It was further refined in Nougat 7.1, and renamed to Night Display. You can enable it here and adjust different options. WARNING: On some devices, activating this will cause the screen to go black!</string>
    <string name="option_touchwiz_qs_row_count">Quick Settings Row Count</string>
    <string name="option_touchwiz_qs_row_count_desc">On Samsung TouchWiz Nougat and Oreo, it\'s possible to customize the QS layout grid with hidden settings. Use this to change the row count. Please enable this as a Persistent Option.</string>
    <string name="option_touchwiz_qs_column_count">Quick Settings Column Count</string>
    <string name="option_touchwiz_qs_column_count_desc">On Samsung TouchWiz Nougat and Oreo, it\'s possible to customize the QS layout grid with hidden settings. Use this to change the column count. Please enable this as a Persistent Option.</string>
    <string name="option_qs_editor">Quick Settings Editor</string>
    <string name="option_qs_editor_desc">While custom QS tiles are only available on Android Nougat (7.0) and later, Marshmallow (6.0) still has limited QS editing available. You can reorder, remove, and add default QS tiles, as well as basic Intents.</string>
    <string name="option_qs_fancy_anim">QS Fancy Animation</string>
    <string name="option_qs_fancy_anim_desc">On supported devices, you can use this to disable the fancy QS tile movement and fading when fully expanding the notification center. If this doesn\'t seem to have an effect on your device, keep it turned on to avoid other issues.</string>
    <string name="option_qs_move_full_rows">QS Move Full Rows</string>
    <string name="option_qs_move_full_rows_desc">What this actually does isn\'t explained very well, but it does something and you could try it if you want. It has something to do with pulling down the notification center.</string>
    <string name="enabled">Enabled</string>
    <string name="tile_full_immersive">Full Immersive</string>
    <string name="tile_nav_immersive">Nav Immersive</string>
    <string name="tile_status_immersive">Status Immersive</string>
    <string name="status_bar_icons">Status Bar Icons</string>
    <string name="network_states">Network States</string>
    <string name="volume_visibility">Volume Visibility</string>
    <string name="bluetooth_visibility">Bluetooth Visibility</string>
    <string name="location_visibility">Location Visibility</string>
    <string name="alarm_visibility">Alarm Visibility</string>
    <string name="sync_visibility">Sync Visibility</string>
    <string name="tty_visibility">TTY Visibility</string>
    <string name="eri_visibility">ERI Visibility</string>
    <string name="secure_visibility">Secure Visibility</string>
    <string name="mute_visibility">Mute Visibility</string>
    <string name="speakerphone_visibility">Speakerphone Visibility</string>
    <string name="airplane_visibility">Airplane Visibility</string>
    <string name="wifi_visibility">WiFi Visibility</string>
    <string name="mobile_visibility">Mobile Visibility</string>
    <string name="wifi_level">WiFi Level</string>
    <string name="wifi_fully_connected">WiFi Fully Connected</string>
    <string name="mobile_level">Mobile Level</string>
    <string name="mobile_fully_connected">Mobile Fully Connected</string>
    <string name="mobile_data_type">Mobile Data Type</string>
    <string name="battery_level">Battery Level</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="status_bar_style">Status Bar Style</string>
    <string name="tile_battery">Battery</string>
    <string name="tile_clock">Clock</string>
    <string name="tile_demo">Demo Mode</string>
    <string name="tile_heads_up">Heads Up Notifications</string>
    <string name="tile_night_mode">Night Mode</string>
</resources>